--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 </head>
 
 <body>
-
+    
+    
 
     <div class="container">
         <h1>Food Delivery</h1>
+        <img src="food.jpg" alt="food image">
+
         <div class="navbar">
             <ul>
                 <li><a href="#">HOME</a></li>
