--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="content">
         <h3>Welcome to Food Delivery Website</h3>
         <h1>Healthy and Natural Foods</h1>
-        <p>Majid is a restaurant located in Nakuru.We have some amazing recipes
+        <p>Pies N’ Thighs is a restaurant located in Nakuru.We have some amazing recipes
             and the most <br> qualifide chefs in the country.</p>
     </div>
     <div class="search">
